--- a/AngularSPA/scripts/app/views/step1.html
+++ b/AngularSPA/scripts/app/views/step1.html
@@ -1,3 +1,8 @@
-﻿<h1>Step 1</h1>
-<label for="name">Name:</label>
-<input type="text" id="name" ng-model="viewModel.name"/>
+﻿<div class="row">
+    <div class="col-md-2 col-md-offset-1">
+        <label for="name">First name:</label>
+    </div>
+    <div class="col-md-9">
+        <input type="text" id="name" ng-model="viewModel.name" />
+    </div>
+</div>
