--- a/AngularSPA/scripts/app/views/step2.html
+++ b/AngularSPA/scripts/app/views/step2.html
@@ -1,3 +1,8 @@
-﻿<h1>Step 2</h1>
-<label for="address">Address:</label>
-<input type="text" id="address" ng-model="viewModel.address" />
+﻿<div class="row">
+    <div class="col-md-2 col-md-offset-1">
+        <label for="address">Address:</label>
+    </div>
+    <div class="col-md-9">
+        <input type="text" id="address" ng-model="viewModel.address" />
+    </div>
+</div>
