--- a/AngularSPA/scripts/app/views/step3.html
+++ b/AngularSPA/scripts/app/views/step3.html
@@ -1,2 +1,5 @@
-﻿<h1>Step 3</h1>
-Hello {{viewModel.name}}, living in {{viewModel.address}}!
+﻿<div class="row">
+    <div class="col-md-11 col-md-offset-1">
+        Hello {{viewModel.name}}, living in {{viewModel.address}}!
+    </div>
+</div>
