--- a/AngularSPA/scripts/app/views/step3.html
+++ b/AngularSPA/scripts/app/views/step3.html
@@ -1,5 +1,5 @@
 ﻿<div class="row">
     <div class="col-md-11 col-md-offset-1">
-        Hello {{viewModel.name}}, living in {{viewModel.address}}!
+        Hello {{viewModel.firstName}}, living in {{viewModel.distance}}!
     </div>
 </div>
