--- a/AngularSPA/views/step3.html
+++ b/AngularSPA/views/step3.html
@@ -6,10 +6,10 @@
         Summary
     </div>
     <ul class="list-group">
-        <li class="list-group-item"><strong>First name:</strong> {{viewModel.firstName}}</li>
-        <li class="list-group-item"><strong>Last name:</strong> {{viewModel.lastName}}</li>
-        <li class="list-group-item"><strong>Location:</strong> {{viewModel.location.name}}</li>
-        <li class="list-group-item"><strong>Car:</strong> {{viewModel.car.Name}}</li>
-        <li class="list-group-item"><strong>Distance:</strong>&nbsp;<localizeddistance distance="{{viewModel.distance}}" location="{{viewModel.location.id}}"></localizeddistance></li>
+        <li class="list-group-item"><strong>First name:</strong> {{registration.viewModel.firstName}}</li>
+        <li class="list-group-item"><strong>Last name:</strong> {{registration.viewModel.lastName}}</li>
+        <li class="list-group-item"><strong>Location:</strong> {{registration.viewModel.location.name}}</li>
+        <li class="list-group-item"><strong>Car:</strong> {{registration.viewModel.car.Name}}</li>
+        <li class="list-group-item"><strong>Distance:</strong>&nbsp;<localizeddistance distance="{{registration.viewModel.distance}}" location="{{registration.viewModel.location.id}}"></localizeddistance></li>
     </ul>
 </div>
